<resources>
    <string name="app_name">Battleship</string>
    <string name="app_title">Battle Kids</string>
    <string name="win_title">YOU WIN!!!</string>
    <string name="lose_title">YOU LOSE</string>
    <string name="easyButton">Easy</string>
    <string name="mediumButton">Medium</string>
    <string name="hardButton">Hard</string>
    <string name="mainButton">Main</string>
    <string name="newGameButton">NEW GAME</string>
    <string name="playerTurn">Your Turn</string>
    <string name="playerHit">HIT! \nPlay again</string>
    <string name="playerMiss">You miss\n</string>
    <string name="playerWrong">Wrong move \ntry another spot</string>
    <string name="computerHit">Computer HIT \nand has one more turn!"</string>
    <string name="computerMiss">Computer miss\n</string>
    <string name="computerTurn">Computer turn</string>
    <string name="playerBoard">Your Board</string>
    <string name="computerBoard">Enemy Board</string>
    <string name="drowned">A group got Drowned</string>
    <string name="intentHit">Be careful! \nfish was hit!</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="nameTitle">Name</string>
    <string name="scoreTitle">Score</string>
    <string name="dateTitle">Date</string>
    <string name="empty">empty</string>
    <string name="enterYourName">Please enter your name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
